[package]
name = "axum-course"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
axum = { version = "0.6.20" }

[dev-dependencies]
anyhow = { version = "1" }
httpc-test = { version = "0.1.5" }
