[package]
name = "axum-auth"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
# SERDE
serde = { version = "1.0", features = ["derive"]}
serde_json = { version = "1.0" }
# AXUM
axum = { version = "0.7" }
tower-http = { version = "0.5.0", features = ["fs"]}
tower-cookies = { version = "0.10"}

[dev-dependencies]
anyhow = { version = "1.0" }
httpc-test = { version = "0.1"}
